# syncevolution_n9

./: .gitignore
libsynthesis/: .gitignore  AUTHORS  COPYING  CodingStyle  LICENSE.EPL  Makefile.am  README  Synthesis_AG_Contributor_Agreement.doc  autogen-maemo.sh  autogen.sh  configure.in  synthesis-sdk.pc.in  synthesis.pc.in
libsynthesis/doc/: engine_settings_keys.rtf
libsynthesis/src/: Doxyfile  Makefile.am.in  client_engine_linux.mk  combi_engine_linux.mk  gen-makefile-am.sh  global_options.h  prefix_file.h  server_engine_linux.mk  smltk-linker.map  syncml_tk_prefix_file.h  synthesis-linker.map
libsynthesis/src/DB_interfaces/api_db/: DLL_interface.cpp  DLL_interface.h  dbapi.cpp  dbapi.h  dbapi_include.h  pluginapiagent.cpp  pluginapiagent.h  pluginapids.cpp  pluginapids.h  plugindb.h  plugindb_precomp.h  sync_dbapiconnect.cpp  sync_dbapiconnect.h
libsynthesis/src/DB_interfaces/odbc_db/: odbcapiagent.cpp  odbcapiagent.h  odbcapids.cpp  odbcapids.h  odbcdb.h  odbcdb_precomp.h
libsynthesis/src/Targets/clientEngine_dbg/: clientengine_dbg++.pch  clientengine_dbg.pch  clientengine_dbg_x86_prefix.h  target_options.h
libsynthesis/src/Targets/sysytool/: sysytool++.pch  sysytool.pch  sysytool_linux_x86_prefix.h  sysytool_x86_prefix.h  target_options.h  version.rc
libsynthesis/src/Transport_interfaces/engine/: engine_client.h  engine_client_precomp.h  engine_server.h  engine_server_precomp.h  engineclientbase.cpp  engineclientbase.h  enginesessiondispatch.cpp  enginesessiondispatch.h
libsynthesis/src/expat/: copying.txt
libsynthesis/src/expat/xmlparse/: xmlparse.c
libsynthesis/src/expat/xmltok/: xmltok.c  xmltok_impl.c
libsynthesis/src/pcre/: config.h  pcre_chartables.c  pcre_compile.c  pcre_config.c  pcre_config_android.h  pcre_config_macosx.h  pcre_dfa_exec.c  pcre_exec.c  pcre_fullinfo.c  pcre_get.c  pcre_globals.c  pcre_info.c  pcre_maketables.c  pcre_newline.c  pcre_ord2utf8.c  pcre_refcount.c  pcre_setup.h  pcre_study.c  pcre_tables.c  pcre_try_flipped.c  pcre_ucp_searchfuncs.c  pcre_valid_utf8.c  pcre_version.c  pcre_xclass.c  pcregexp.pas
libsynthesis/src/platform_adapters/: binfile.cpp  binfile.h  configfiles.h  platform_DLL.h  platform_file.h  platform_headers.h  platform_mutex.h  platform_thread.h  profiling.h  sysync_glob_vars.h  sysyncinit.cpp
libsynthesis/src/platform_adapters/linux/: configfiles.cpp  ctype  platform_DLL.cpp  platform_exec.c  platform_exec.h  platform_headers.h  platform_time.cpp  platform_time.h  platform_timezones.cpp  profiling.cpp
libsynthesis/src/platform_adapters/macosx/: configfiles.mm  platform_exec.c  platform_exec.h  platform_headers.h  platform_time.cpp  platform_time.h  platform_timezones.mm  profiling.cpp
libsynthesis/src/platform_adapters/unix_common/: platform_file.cpp  platform_mutex.cpp  platform_pipe.c  platform_pipe.h  platform_thread.cpp
libsynthesis/src/syncapps/clientEngine_custom/: clientengine_custom.h  clientengine_custom_Base.cpp  clientengine_custom_Base.h  clientengine_custom_precomp.h  product_options.h
libsynthesis/src/syncapps/serverEngine_custom/: combi_product_options.h  product_options.h  serverengine_custom.h  serverengine_custom_Base.cpp  serverengine_custom_Base.h  serverengine_custom_precomp.h
libsynthesis/src/syncapps/sysytool/: sysytool.cpp  sysytool.h  sysytool_dispatch.cpp  sysytool_dispatch.h  sysytool_precomp.h
libsynthesis/src/syncml_tk/src/sml/inc/palm/: define.h
libsynthesis/src/sysync/: binfilebase.cpp  binfilebase.h  binfileimplclient.cpp  binfileimplclient.h  binfileimplds.cpp  binfileimplds.h  clientautosync_inc.cpp  clientautosync_inc.h  clientprovisioning_inc.cpp  clientprovisioning_inc.h  configelement.cpp  configelement.h  customimplagent.cpp  customimplagent.h  customimplds.cpp  customimplds.h  dataconversion.cpp  dataobjtype.cpp  dataobjtype.h  debuglogger.cpp  debuglogger.h  engineentry.cpp  engineentry.h  engineinterface.cpp  engineinterface.h  global_progress.h  iso8601.cpp  iso8601.h  itemfield.cpp  itemfield.h  localengineds.cpp  localengineds.h  mimediritemtype.cpp  mimediritemtype.h  mimedirprofile.cpp  mimedirprofile.h  multifielditem.cpp  multifielditem.h  multifielditemtype.cpp  multifielditemtype.h  (+63 more)
libsynthesis/src/sysync_SDK/Sources/: SDK_support.cpp  SDK_support.h  SDK_util.c  SDK_util.h  UI_util.cpp  UI_util.h  admindata.cpp  admindata.h  blobs.cpp  blobs.h  cp936_tables_inc.cpp  dataconversion.h  dbitem.cpp  dbitem.h  engine_defs.h  enginemodulebase.cpp  enginemodulebase.h  enginemodulebridge.cpp  enginemodulebridge.h  enginestubs.c  gb2312_tables_inc.cpp  generic_types.h  lineartime.cpp  lineartime.h  prefix_file.h  san.cpp  san.h  stringutil.cpp  stringutil.h  syerror.h  sync_dbapi.h  sync_dbapidef.h  sync_declarations.h  sync_include.h  sync_uiapi.h  syncexception.cpp  syncexception.h  sysync_b64.cpp  sysync_b64.h  sysync_md5.cpp  (+5 more)
libsynthesis/src/sysync_SDK/configs/: sunbird_client.xml  syncclient_sample_config.xml  syncserv_sample_config.xml
libsynthesis/src/sysync_SDK/dbplugin_cocoa_sample/: sample_dbplugin.h  sample_dbplugin.m  sample_dbplugin1.h  sample_dbplugin1.mm  sample_dbplugin2.h  sample_dbplugin2.mm  sample_dbplugin3.h  sample_dbplugin3.mm  sample_dbplugin4.h  sample_dbplugin4.mm  target_options.h
libsynthesis/src/sysync_SDK/ios_syncclient_app_sample/: AppDelegate.h  AppDelegate.m  FlipsideViewController.h  FlipsideViewController.m  MainViewController.h  MainViewController.m  READ-ME-iOS_syncclient_sample.txt  ios_syncclient_app_sample-Info.plist  ios_syncclient_app_sample-Prefix.pch  ios_syncclient_app_sample.xml  main.m
libsynthesis/src/sysync_SDK/sdk_sources_cocoa/: SettingsKey.h  SettingsKey.m  SyncEngine.h  SyncEngine.m  dbplugin_cocoa.h  dbplugin_cocoa.m  dbplugin_cocoa_wrapper.mm  target_options.h
libsynthesis/src/sysync_ios.xcodeproj/: project.pbxproj
libsynthesis/src/sysync_ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libsynthesis/src/zlib/: ChangeLog  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zconf.in.h  zutil.c  zutil.h
(+196 files in other folders)
